test/zinc_source/compile_errors/functions/20_ufcs_incompatible_receiver.zn
// expected-error: parameter 'text' expects a compatible 'string' value

fn shout(text: string) {
    return text
}

fn main() {
    value = 1
    print(value.shout())
}
